[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
name = "apns2"
version = "0.7.4"
description = "A python library for interacting with the Apple Push Notification Service via HTTP/2 protocol"
readme = 'README.md'
authors = ["Sergey Petrov <me@pr0ger.prg>"]
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
cryptography = { version = ">=45.0.4", python = ">=3.8,<3.9.0 || >3.9.0,<3.9.1 || >3.9.1,<4.0" }
httpx = { version = ">=0.28.1", extras = ["http2"] }
pyjwt = ">=2.10.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
freezegun = "^1.5.1"
pytest-httpx = "^0.35.0"
pylint = "^3.2.5"

[tool.mypy]
python_version = "3.9"
strict = true
mypy_path = "typings"
ignore_missing_imports = true

[tool.pylint.design]
max-args = 10
max-attributes = 10

[tool.pylint.format]
max-line-length = 120

[tool.pylint.'messages control']
disable = "missing-docstring, too-few-public-methods, locally-disabled, invalid-name"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 3.15
envlist = py39, py310, py311, py312, py313
isolated_build = True
[testenv]
deps =
    poetry
commands =
    poetry install -v --with test
    poetry run pytest {posargs}
"""

[tool.pdm.dev-dependencies]
pytest = ["^8.2.2"]
pytest-cov = ["^5.0.0"]
pytest-anyio = ["^0.0.0"]
pytest-httpx = ["^0.35.0"]
pylint = ["^3.2.5"]
